<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:paddingLeft="5dp"
    android:paddingTop="15dp"
    android:paddingRight="5dp"
    android:paddingBottom="5dp">

    <LinearLayout
        android:id="@+id/layoutNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toplane"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonPatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/button"
            android:fontFamily="@font/timeless_bold"
            android:text="@string/buttonMainPatch"
            android:textColor="@color/colorButton"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonAllPatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:fontFamily="@font/timeless_bold"
            android:text="@string/buttonMainAllPatch"
            android:textColor="@color/colorButton"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonChamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/buttonPatch"
            android:background="@drawable/button"
            android:fontFamily="@font/timeless_bold"
            android:text="@string/buttonMainChamp"
            android:textColor="@color/colorButton"
            android:textSize="14sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutNews"
        android:background="@drawable/midlelane2"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAllChampNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/button"
            android:fontFamily="@font/timeless_bold"
            android:text="@string/buttonMainAllChampNews"
            android:textColor="@color/colorButton"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonAllESportsNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button"
            android:fontFamily="@font/timeless_bold"
            android:text="@string/buttonMainAllESportsNews"
            android:textColor="@color/colorButton"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/midlelane2"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <Button
            android:id="@+id/buttonAllDevNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/button"
            android:fontFamily="@font/timeless_bold"
            android:text="@string/buttonMainAllDevNews"
            android:textColor="@color/colorButton"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonAllLoreNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button"
            android:fontFamily="@font/timeless_bold"
            android:text="@string/buttonMainAllLoreNews"
            android:textColor="@color/colorButton"
            android:textSize="14sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout3"
        android:layout_centerHorizontal="true"
        android:background="@drawable/midlelane2"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <Button
            android:id="@+id/buttonAllMediaNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/button"
            android:fontFamily="@font/timeless_bold"
            android:text="@string/buttonMainAllMediaNews"
            android:textColor="@color/colorButton"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonAllMerchNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button"
            android:fontFamily="@font/timeless_bold"
            android:text="@string/buttonMainAllMerchNews"
            android:textColor="@color/colorButton"
            android:textSize="14sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout4"
        android:layout_centerHorizontal="true"
        android:background="@drawable/midlelane2"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <Button
            android:id="@+id/buttonAllCommunityNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/button"
            android:fontFamily="@font/timeless_bold"
            android:text="@string/buttonMainAllCommunityNews"
            android:textColor="@color/colorButton"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonAllRiotGamesNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button"
            android:fontFamily="@font/timeless_bold"
            android:text="@string/buttonMainAllRiotGamesNews"
            android:textColor="@color/colorButton"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout5"
        android:background="@drawable/botlane"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/buttonAllNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:fontFamily="@font/timeless_bold"
                android:text="@string/buttonMainAllNews"
                android:textColor="@color/colorButton"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/policyMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutAll"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/timeless"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/policyMessage"
        android:textColor="@color/colorWhite"
        android:textSize="10sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/buyImg"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_shopping_cart_white_48dp" />

        <ImageView
            android:id="@+id/shareImg"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_share_white_48dp" />

        <ImageView
            android:id="@+id/settingsImg"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_settings_white_48dp" />

    </LinearLayout>
</RelativeLayout>
